Finalizado vista mobil

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="stats-details">
-          <div class="amount">12m+</div>
+          <div class="amount last">12m+</div>
           <div class="concept">queries</div>
         </div>
 
